Atualiza a extensão SIAA Data Extractor para a versão 1.3.0, trazendo melhorias na interface e funcionalidades. A nova versão inclui a renomeação de campos, como "Total" para "Total Matriculados", e a adição de um botão para atualizar a extensão diretamente da interface. Além disso, a documentação foi atualizada para refletir as mudanças e todos os arquivos estão prontos para submissão na Chrome Web Store.

--- a/popup.html
+++ b/popup.html
@@ -221,8 +221,7 @@
             <button id="captureButton" class="btn btn-primary">🔄 Capturar Dados</button>
             <button id="viewButton" class="btn btn-secondary" disabled>👁️ Visualizar</button>
             <hr style="width:100%;border:0;border-top:1px solid #ccc;">
-            <button id="downloadButton" class="btn btn-secondary" disabled>📥 Baixar CSV</button>
-            <button id="sendButton" class="btn btn-secondary">📤 Enviar CSV</button>
+            <button id="updateExtButton" class="btn btn-secondary">🧩 Atualizar Extensão</button>
         </div>
     </div>
 
